Improve basic view on angular app

--- a/frontend/js/layout/app-view.html
+++ b/frontend/js/layout/app-view.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
-<div ui-view></div>
+<md-content flex layout-padding>
+  <div ui-view></div>
+</md-content>
 
 <app-footer></app-footer>
