--- a/frontend/js/layout/footer.html
+++ b/frontend/js/layout/footer.html
@@ -1,8 +1,6 @@
-<footer>
-  <div class="container">
-    <a class="logo-font" ui-sref="app.home" ng-bind="::$ctrl.appName | lowercase"></a>
-    <span class="attribution">
-      &copy; {{::$ctrl.date | date:'yyyy'}}.
-    </span>
-  </div>
-</footer>
+<md-toolbar class="md-theme-light">
+  <h2 class="md-toolbar-tools">
+    <a ui-sref="app.home" ng-bind="::$ctrl.appName | lowercase"></a>
+    <span>&copy; {{::$ctrl.date | date:'yyyy'}}.</span>
+  </h2>
+</md-toolbar>
