Add start button component

--- a/frontend/js/components/buttons/start-btn.html
+++ b/frontend/js/components/buttons/start-btn.html
@@ -1,1 +1,6 @@
-<md-button class="md-raised md-primary" ng-click="$ctrl.geolocation()">Start!</md-button>
+<md-button
+  class="md-raised md-primary"
+  ui-sref="app.map"
+  ng-click="$ctrl.geolocation()">
+  Start!
+</md-button>
