Setup reviews on restaurants angular side

--- a/frontend/js/layout/header.html
+++ b/frontend/js/layout/header.html
@@ -6,6 +6,14 @@
       <span ng-bind="::$ctrl.appName | lowercase"></span>
     </md-nav-item>
     <md-nav-item flex="10"
+      md-nav-sref="app.map">
+      Map
+    </md-nav-item>
+    <md-nav-item flex="10"
+      md-nav-sref="app.restaurants">
+      Restaurants
+    </md-nav-item>
+    <md-nav-item flex="10"
       md-nav-sref="app.login" show-authed="false">
       Sign in
     </md-nav-item>
